Fixed ratings overflow

--- a/src/css/OfficialRatings.css
+++ b/src/css/OfficialRatings.css
@@ -1,5 +1,6 @@
 .reviews {
-  
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 
